--- a/forms/src/app/rating-picker/rating-picker-page/rating-picker-page.component.html
+++ b/forms/src/app/rating-picker/rating-picker-page/rating-picker-page.component.html
@@ -9,7 +9,7 @@
     rows='2'
   >
   </paper-textarea>-->
-  <app-rating-picker-options />
+  <app-rating-picker-options formControlName='reviewRating' />
   <div class='review-area' contenteditable formControlName='reviewText'></div>
   <button class='bg-green-300 block w-full py-2'>Save</button>
 </form>
