--- a/forms/src/app/custom-select/custom-select/custom-select.component.html
+++ b/forms/src/app/custom-select/custom-select/custom-select.component.html
@@ -1,1 +1,11 @@
-<p>custom-select works!</p>
+<div
+  class='flex flex-col border-2 border-black px-5 py-2 box-border rounded min-w-[350px] transition-colors hover:bg-gray-50 group/value cursor-pointer'
+>
+  <span class='text-sm font-bold'>{{ label }}</span>
+  <div class='flex justify-between items-baseline'>
+    <span class='transition-transform origin-left group-hover/value:scale-90' [ngClass]="{ 'opacity-40': !value }">{{
+      value || 'Nothing is selected...'
+      }}</span>
+    <span class='text-xl'>👇</span>
+  </div>
+</div>
