--- a/forms/src/app/custom-select/custom-select-page/custom-select-page.component.html
+++ b/forms/src/app/custom-select/custom-select-page/custom-select-page.component.html
@@ -1,3 +1,3 @@
 <div class='flex justify-center'>
-  <app-custom-select label='Pick the User' />
+  <app-custom-select class='w-[350px]' label='Pick the User' />
 </div>
