feat(custom-select): create option component

--- a/forms/src/app/custom-select/custom-select-page/custom-select-page.component.html
+++ b/forms/src/app/custom-select/custom-select-page/custom-select-page.component.html
@@ -1,3 +1,8 @@
 <div class='flex justify-center'>
-  <app-custom-select class='w-[350px]' label='Pick the User' />
+  <app-custom-select class='w-[350px]' label='Pick the User'>
+    <app-select-option value='hydrogen'>Hydrogen</app-select-option>
+    <app-select-option value='beryllium'>Beryllium</app-select-option>
+    <app-select-option value='nitrogen'>Nitrogen</app-select-option>
+    <app-select-option value='fluorine'>Fluorine</app-select-option>
+  </app-custom-select>
 </div>
