--- a/forms/src/app/custom-select/custom-select/custom-select.component.html
+++ b/forms/src/app/custom-select/custom-select/custom-select.component.html
@@ -26,6 +26,6 @@
     @dropdown
     (@dropdown.done)='onPanelAnimationDone($event)'
     class='shadow-2xl block w-full min-h-[200px] px-5 py-2 border-2 border-black origin-top-left'>
-    <p>Overlay panel</p>
+    <ng-content />
   </div>
 </ng-template>
