style(custom-select): add disabled state

--- a/forms/src/app/custom-select/custom-select-page/custom-select-page.component.html
+++ b/forms/src/app/custom-select/custom-select-page/custom-select-page.component.html
@@ -3,6 +3,6 @@
     <app-select-option value='hydrogen'>Hydrogen</app-select-option>
     <app-select-option value='beryllium'>Beryllium</app-select-option>
     <app-select-option value='nitrogen'>Nitrogen</app-select-option>
-    <app-select-option value='fluorine'>Fluorine</app-select-option>
+    <app-select-option value='fluorine' disabled disabledHint='My reason'>Fluorine</app-select-option>
   </app-custom-select>
 </div>
