--- a/forms/src/app/custom-select/custom-select-page/custom-select-page.component.html
+++ b/forms/src/app/custom-select/custom-select-page/custom-select-page.component.html
@@ -1,8 +1,10 @@
 <div class='flex justify-center'>
-  <app-custom-select class='w-[350px]' label='Pick the User'>
-    <app-select-option value='hydrogen'>Hydrogen</app-select-option>
-    <app-select-option value='beryllium'>Beryllium</app-select-option>
-    <app-select-option value='nitrogen'>Nitrogen</app-select-option>
-    <app-select-option value='fluorine' disabled disabledHint='My reason'>Fluorine</app-select-option>
+  <app-custom-select value='hydrogen' label='Pick the Element' class='w-[350px]'>
+    <div>
+      <app-select-option value='hydrogen'>Hydrogen</app-select-option>
+      <app-select-option value='beryllium'>Beryllium</app-select-option>
+      <app-select-option value='nitrogen'>Nitrogen</app-select-option>
+      <app-select-option value='fluorine' disabled disabledHint='My reason'>Fluorine</app-select-option>
+    </div>
   </app-custom-select>
 </div>
