feat(custom-select): improve typings for select and option components

--- a/forms/src/app/custom-select/custom-select-page/custom-select-page.component.html
+++ b/forms/src/app/custom-select/custom-select-page/custom-select-page.component.html
@@ -1,5 +1,5 @@
 <div class='flex justify-center'>
-  <app-custom-select (selectionChanged)='onSelectionChange($event)' value='hydrogen' label='Pick the Element'
+  <app-custom-select (selectionChanged)='onSelectionChange($event)' [value]='selectedValue' label='Pick the Element'
                      class='w-[350px]'>
     <div>
       <app-select-option value='hydrogen'>Hydrogen</app-select-option>
