feat(custom-select): use complex data structures

--- a/forms/src/app/custom-select/custom-select-page/custom-select-page.component.html
+++ b/forms/src/app/custom-select/custom-select-page/custom-select-page.component.html
@@ -1,11 +1,12 @@
 <div class='flex justify-center'>
-  <app-custom-select (selectionChanged)='onSelectionChange($event)' [value]='selectedValue' label='Pick the Element'
-                     class='w-[350px]'>
-    <div>
-      <app-select-option value='hydrogen'>Hydrogen</app-select-option>
-      <app-select-option value='beryllium'>Beryllium</app-select-option>
-      <app-select-option value='nitrogen'>Nitrogen</app-select-option>
-      <app-select-option value='fluorine' disabled disabledHint='My reason'>Fluorine</app-select-option>
-    </div>
+  <app-custom-select
+    (selectionChanged)='onSelectionChange($event)'
+    [displayWith]='displayWithFn'
+    [value]='selectedValue'
+    label='Pick the Element'
+    class='w-[350px]'
+  >
+    <app-select-option *ngFor='let user of users' [value]='user'>{{ user.name }}</app-select-option>
+    <!--<app-select-option value='fluorine' disabled disabledHint='My reason'>Fluorine</app-select-option>-->
   </app-custom-select>
 </div>
