--- a/forms/src/app/custom-select/custom-select/custom-select.component.html
+++ b/forms/src/app/custom-select/custom-select/custom-select.component.html
@@ -8,7 +8,7 @@
     <span
       class='transition-transform origin-left group-hover/value:scale-90 text-lg'
       [ngClass]="{ 'opacity-40': !value }"
-    >{{ value || 'Nothing is selected...' }}</span
+    >{{ displayValue || 'Nothing is selected...' }}</span
     >
     <span class='text-xl'>👇</span>
   </div>
@@ -25,7 +25,10 @@
   <div
     @dropdown
     (@dropdown.done)='onPanelAnimationDone($event)'
-    class='shadow-2xl block w-full min-h-[200px] px-5 py-2 border-2 border-black origin-top-left'>
-    <ng-content />
+    class='shadow-2xl block w-full min-h-[200px] max-h-[350px] px-5 py-2 border-2 border-black origin-top-left'
+  >
+    <div class='overflow-y-auto h-full'>
+      <ng-content />
+    </div>
   </div>
 </ng-template>
