fix(custom-select): compare complex data structures

--- a/forms/src/app/custom-select/custom-select-page/custom-select-page.component.html
+++ b/forms/src/app/custom-select/custom-select-page/custom-select-page.component.html
@@ -1,8 +1,9 @@
 <div class='flex justify-center'>
   <app-custom-select
-    (selectionChanged)='onSelectionChange($event)'
+    [compareWith]='compareWithFn'
     [displayWith]='displayWithFn'
     [value]='selectedValue'
+    (selectionChanged)='onSelectionChange($event)'
     label='Pick the Element'
     class='w-[350px]'
   >
