feat(custom-select): implement multi-selection

--- a/forms/src/app/custom-select/custom-select-page/custom-select-page.component.html
+++ b/forms/src/app/custom-select/custom-select-page/custom-select-page.component.html
@@ -4,6 +4,7 @@
     [displayWith]='displayWithFn'
     [value]='selectedValue'
     (selectionChanged)='onSelectionChange($event)'
+    multiple
     label='Pick the Element'
     class='w-[350px]'
   >
