--- a/forms/src/app/custom-select/custom-select-page/custom-select-page.component.html
+++ b/forms/src/app/custom-select/custom-select-page/custom-select-page.component.html
@@ -4,11 +4,14 @@
     [displayWith]='displayWithFn'
     [value]='selectedValue'
     (selectionChanged)='onSelectionChange($event)'
+    (searchChanged)='onHandleSearch($event)'
+    (closed)='onHandleSearch("")'
+    searchable
     multiple
     label='Pick the Element'
     class='w-[350px]'
   >
-    <app-select-option *ngFor='let user of users' [value]='user'>{{ user.name }}</app-select-option>
+    <app-select-option *ngFor='let user of filteredUsers' [value]='user'>{{ user.name }}</app-select-option>
     <!--<app-select-option value='fluorine' disabled disabledHint='My reason'>Fluorine</app-select-option>-->
   </app-custom-select>
 </div>
