style(custom-select): implement disabled state

--- a/forms/src/app/custom-select/custom-select-page/custom-select-page.component.html
+++ b/forms/src/app/custom-select/custom-select-page/custom-select-page.component.html
@@ -8,6 +8,7 @@
     (closed)='onHandleSearch("")'
     searchable
     multiple
+    disabled
     label='Pick the Element'
     class='w-[350px]'
   >
