--- a/forms/src/app/rating-picker/rating-picker-page/rating-picker-page.component.html
+++ b/forms/src/app/rating-picker/rating-picker-page/rating-picker-page.component.html
@@ -1,6 +1,9 @@
-<form [formGroup]='form' (ngSubmit)='onSubmit()'
-      class='flex flex-col gap-4 bg-gray-100 backdrop-blur-3xl p-8 w-1/2 mx-auto mt-7'>
-  <h3 class='text-2xl font-bold'>Review</h3>
+<form
+  [formGroup]="form"
+  (ngSubmit)="onSubmit()"
+  class="flex flex-col gap-4 bg-gray-100 backdrop-blur-3xl p-8 w-1/2 mx-auto mt-7"
+>
+  <h3 class="text-2xl font-bold">Review</h3>
   <!--<paper-textarea
     ngDefaultControl
     formControlName='reviewText'
@@ -9,7 +12,7 @@
     rows='2'
   >
   </paper-textarea>-->
-  <app-rating-picker-options formControlName='reviewRating' />
-  <div class='review-area' contenteditable formControlName='reviewText'></div>
-  <button class='bg-green-300 block w-full py-2'>Save</button>
+  <app-rating-picker-options formControlName="reviewRating" />
+  <div class="review-area" contenteditable formControlName="reviewText"></div>
+  <button class="bg-green-300 block w-full py-2">Save</button>
 </form>
