--- a/forms/src/app/app.component.html
+++ b/forms/src/app/app.component.html
@@ -1,12 +1,12 @@
 <app-header />
-<main class='pb-10'>
+<main class="pb-10">
   <article>
     <h1
-      class='bg-gradient-to-r from-green-300 via-blue-500 to-purple-600 bg-clip-text text-3xl font-extrabold text-transparent text-center sm:text-5xl mt-10 mb-14'
+      class="bg-gradient-to-r from-green-300 via-blue-500 to-purple-600 bg-clip-text text-3xl font-extrabold text-transparent text-center sm:text-5xl mt-10 mb-14"
     >
       {{ title.getTitle() }}
     </h1>
-    <div class='max-w-screen-xl m-auto'>
+    <div class="max-w-screen-xl m-auto">
       <router-outlet></router-outlet>
     </div>
   </article>
