--- a/forms/src/app/core/button/button.component.html
+++ b/forms/src/app/core/button/button.component.html
@@ -1,7 +1,7 @@
 <button
-  [type]='type'
-  [disabled]='disabled'
-  class='inline-block shrink-0 rounded-md border border-blue-600 px-12 py-3 text-sm font-medium transition focus:outline-none focus:ring'
+  [type]="type"
+  [disabled]="disabled"
+  class="inline-block shrink-0 rounded-md border border-blue-600 px-12 py-3 text-sm font-medium transition focus:outline-none focus:ring"
   [ngClass]="{
     'bg-blue-600 text-white active:text-blue-500 hover:bg-blue-700': type !== 'reset',
     'bg-white text-blue-600 hover:bg-blue-600 hover:text-white': type === 'reset',
