--- a/forms/src/app/core/header/header.component.html
+++ b/forms/src/app/core/header/header.component.html
@@ -1,31 +1,31 @@
-<header class='bg-blue-950 text-white mb-4'>
-  <div class='mx-auto px-4 py-8 sm:px-6 sm:py-8 lg:px-8'>
-    <div class='sm:flex sm:items-center sm:justify-between'>
-      <div class='text-center sm:text-left'>
-        <h1 class='text-2xl font-bold sm:text-3xl'>Angular forms</h1>
-        <p class='mt-1.5 text-sm text-gray-300'>Let's write a new blog post! 🎉</p>
+<header class="bg-blue-950 text-white mb-4">
+  <div class="mx-auto px-4 py-8 sm:px-6 sm:py-8 lg:px-8">
+    <div class="sm:flex sm:items-center sm:justify-between">
+      <div class="text-center sm:text-left">
+        <h1 class="text-2xl font-bold sm:text-3xl">Angular forms</h1>
+        <p class="mt-1.5 text-sm text-gray-300">Let's write a new blog post! 🎉</p>
       </div>
 
-      <div class='mt-4 flex flex-col gap-4 sm:mt-0 sm:flex-row sm:items-center'>
-        <nav class='[&_a]:mr-2 [&_a]:px-2 [&_a]:py-2 [&_a]:rounded-full'>
+      <div class="mt-4 flex flex-col gap-4 sm:mt-0 sm:flex-row sm:items-center">
+        <nav class="[&_a]:mr-2 [&_a]:px-2 [&_a]:py-2 [&_a]:rounded-full">
           <a
-            routerLinkActive='bg-green-300 text-blue-950'
-            routerLink='/template-driven'
-            [routerLinkActiveOptions]='{ exact: true }'
+            routerLinkActive="bg-green-300 text-blue-950"
+            routerLink="/template-driven"
+            [routerLinkActiveOptions]="{ exact: true }"
           >
             Template-Driven Forms
           </a>
-          <a routerLinkActive='bg-green-300 text-blue-950' routerLink='/reactive-forms'>Reactive Forms</a>
-          <a routerLinkActive='bg-green-300 text-blue-950' routerLink='/custom-rating-picker'>Custom Rating Picker</a>
-          <a routerLinkActive='bg-green-300 text-blue-950' routerLink='/custom-select'>Custom Select</a>
-          <a routerLinkActive='bg-green-300 text-blue-950' routerLink='/dynamic-forms'>Dynamic Forms</a>
-          <a routerLinkActive='bg-green-300 text-blue-950' routerLink='/filters'>Advanced Filters</a>
+          <a routerLinkActive="bg-green-300 text-blue-950" routerLink="/reactive-forms">Reactive Forms</a>
+          <a routerLinkActive="bg-green-300 text-blue-950" routerLink="/custom-rating-picker">Custom Rating Picker</a>
+          <a routerLinkActive="bg-green-300 text-blue-950" routerLink="/custom-select">Custom Select</a>
+          <a routerLinkActive="bg-green-300 text-blue-950" routerLink="/dynamic-forms">Dynamic Forms</a>
+          <a routerLinkActive="bg-green-300 text-blue-950" routerLink="/filters">Advanced Filters</a>
         </nav>
         <input
-          [formControl]='query'
-          type='text'
-          placeholder='Global Search'
-          class='bg-transparent outline outline-1 outline-white/50 px-4 py-2 rounded-full focus:outline-green-300'
+          [formControl]="query"
+          type="text"
+          placeholder="Global Search"
+          class="bg-transparent outline outline-1 outline-white/50 px-4 py-2 rounded-full focus:outline-green-300"
         />
       </div>
     </div>
