--- a/forms/src/app/custom-select/custom-select-page/custom-select-page.component.html
+++ b/forms/src/app/custom-select/custom-select-page/custom-select-page.component.html
@@ -1,18 +1,18 @@
-<div class='flex justify-center'>
+<div class="flex justify-center">
   <app-custom-select
-    [compareWith]='compareWithFn'
-    [displayWith]='displayWithFn'
-    [value]='selectedValue'
-    (selectionChanged)='onSelectionChange($event)'
-    (searchChanged)='onHandleSearch($event)'
-    (closed)='onHandleSearch("")'
+    [compareWith]="compareWithFn"
+    [displayWith]="displayWithFn"
+    [value]="selectedValue"
+    (selectionChanged)="onSelectionChange($event)"
+    (searchChanged)="onHandleSearch($event)"
+    (closed)="onHandleSearch('')"
     searchable
     multiple
     disabled
-    label='Pick the Element'
-    class='w-[350px]'
+    label="Pick the Element"
+    class="w-[350px]"
   >
-    <app-select-option *ngFor='let user of filteredUsers' [value]='user'>{{ user.name }}</app-select-option>
+    <app-select-option *ngFor="let user of filteredUsers" [value]="user">{{ user.name }}</app-select-option>
     <!--<app-select-option value='fluorine' disabled disabledHint='My reason'>Fluorine</app-select-option>-->
   </app-custom-select>
 </div>
