--- a/forms/src/app/custom-select/custom-select/custom-select.component.html
+++ b/forms/src/app/custom-select/custom-select/custom-select.component.html
@@ -1,48 +1,53 @@
 <div
   cdkOverlayOrigin
-  #trigger='cdkOverlayOrigin'
-  class='flex flex-col border-2 border-black px-5 py-2 box-border rounded w-full transition-colors hover:bg-gray-50 group/value cursor-pointer'
+  #trigger="cdkOverlayOrigin"
+  class="flex flex-col border-2 border-black px-5 py-2 box-border rounded w-full transition-colors hover:bg-gray-50 group/value cursor-pointer"
 >
-  <div class='flex items-center justify-between'>
-    <span class='text-sm font-bold'>{{ label }}</span>
+  <div class="flex items-center justify-between">
+    <span class="text-sm font-bold">{{ label }}</span>
     <button
-      *ngIf='value'
-      (click)='clearSelection($event)'
-      class='bg-gray-100 text-xs cursor-pointer px-3 py-0.5 rounded-full hover:bg-gray-300'
+      *ngIf="value"
+      (click)="clearSelection($event)"
+      class="bg-gray-100 text-xs cursor-pointer px-3 py-0.5 rounded-full hover:bg-gray-300"
     >
       clear
     </button>
   </div>
-  <div class='flex justify-between items-baseline'>
-    <ng-container [ngSwitch]='searchable && isOpen'>
-      <input #searchInput *ngSwitchCase='true' (input)='onHandleSearch($event)' type='text'
-             placeholder='Start typing...' />
+  <div class="flex justify-between items-baseline">
+    <ng-container [ngSwitch]="searchable && isOpen">
+      <input
+        #searchInput
+        *ngSwitchCase="true"
+        (input)="onHandleSearch($event)"
+        type="text"
+        placeholder="Start typing..."
+      />
       <span
-        *ngSwitchCase='false'
-        class='transition-transform origin-left group-hover/value:scale-90 text-lg'
+        *ngSwitchCase="false"
+        class="transition-transform origin-left group-hover/value:scale-90 text-lg"
         [ngClass]="{ 'opacity-40': !value }"
       >
         {{ displayValue || 'Nothing is selected...' }}
       </span>
     </ng-container>
-    <span class='text-xl'>👇</span>
+    <span class="text-xl">👇</span>
   </div>
 </div>
 <ng-template
   cdkConnectedOverlay
-  [cdkConnectedOverlayOrigin]='trigger'
-  [cdkConnectedOverlayOpen]='isOpen'
-  [cdkConnectedOverlayOffsetY]='8'
-  (overlayOutsideClick)='close()'
-  [cdkConnectedOverlayWidth]='defaultWidth'
-  (detach)='close()'
+  [cdkConnectedOverlayOrigin]="trigger"
+  [cdkConnectedOverlayOpen]="isOpen"
+  [cdkConnectedOverlayOffsetY]="8"
+  (overlayOutsideClick)="close()"
+  [cdkConnectedOverlayWidth]="defaultWidth"
+  (detach)="close()"
 >
   <div
     @dropdown
-    (@dropdown.done)='onPanelAnimationDone($event)'
-    class='shadow-2xl block w-full min-h-[200px] max-h-[350px] px-5 py-2 border-2 border-black origin-top-left'
+    (@dropdown.done)="onPanelAnimationDone($event)"
+    class="shadow-2xl block w-full min-h-[200px] max-h-[350px] px-5 py-2 border-2 border-black origin-top-left"
   >
-    <div class='overflow-y-auto h-full'>
+    <div class="overflow-y-auto h-full">
       <ng-content />
     </div>
   </div>
