--- a/forms/src/app/filters/filter-group/filter-group.component.html
+++ b/forms/src/app/filters/filter-group/filter-group.component.html
@@ -1,51 +1,51 @@
-<section class='grid grid-cols-4 gap-10 mb-5'>
-  <div class='w-full'>
-    <span class='block mb-3 text-blue-500'>Rating</span>
+<section class="grid grid-cols-4 gap-10 mb-5">
+  <div class="w-full">
+    <span class="block mb-3 text-blue-500">Rating</span>
     <ngx-slider
-      [(value)]='filters.rating.min'
-      [(highValue)]='filters.rating.max'
-      [options]='ratingOptions'
-      (userChangeEnd)='onFiltersChange()'
+      [(value)]="filters.rating.min"
+      [(highValue)]="filters.rating.max"
+      [options]="ratingOptions"
+      (userChangeEnd)="onFiltersChange()"
     ></ngx-slider>
-    <span class='block mb-3 mt-6 text-blue-500'>Date</span>
+    <span class="block mb-3 mt-6 text-blue-500">Date</span>
     <ngx-slider
-      [(value)]='filters.date.min'
-      [(highValue)]='filters.date.max'
-      [options]='dateOptions'
-      (userChangeEnd)='onFiltersChange()'
+      [(value)]="filters.date.min"
+      [(highValue)]="filters.date.max"
+      [options]="dateOptions"
+      (userChangeEnd)="onFiltersChange()"
     ></ngx-slider>
   </div>
-  <div class='pl-10'>
-    <span class='block mb-3 text-blue-500'>Genres</span>
-    <label [for]='genre.name' *ngFor='let genre of movieGenres' class='block mb-2'>
-      <input type='checkbox' [id]='genre.name' [(ngModel)]='genre.checked' (ngModelChange)='onFiltersChange()' />
+  <div class="pl-10">
+    <span class="block mb-3 text-blue-500">Genres</span>
+    <label [for]="genre.name" *ngFor="let genre of movieGenres" class="block mb-2">
+      <input type="checkbox" [id]="genre.name" [(ngModel)]="genre.checked" (ngModelChange)="onFiltersChange()" />
       {{ genre.name }}
     </label>
   </div>
-  <div class='pl-10'>
-    <span class='block mb-3 text-blue-500'>Languages</span>
-    <label [for]='lang.name' *ngFor='let lang of languages' class='block mb-2'>
-      <input type='checkbox' [id]='lang.name' [(ngModel)]='lang.checked' (ngModelChange)='onFiltersChange()' />
+  <div class="pl-10">
+    <span class="block mb-3 text-blue-500">Languages</span>
+    <label [for]="lang.name" *ngFor="let lang of languages" class="block mb-2">
+      <input type="checkbox" [id]="lang.name" [(ngModel)]="lang.checked" (ngModelChange)="onFiltersChange()" />
       {{ lang.name }}
     </label>
   </div>
   <div>
     <input
-      type='text'
-      class='border border-gray-500 px-4 py-1 mb-7 rounded-full'
-      placeholder='Search movie...'
-      [(ngModel)]='filters.query'
-      (input)='onFiltersChange()'
+      type="text"
+      class="border border-gray-500 px-4 py-1 mb-7 rounded-full"
+      placeholder="Search movie..."
+      [(ngModel)]="filters.query"
+      (input)="onFiltersChange()"
     />
-    <span class='block mb-3 text-blue-500'>Order by</span>
-    <label [for]='order' *ngFor='let order of orderList' class='block mb-2'>
+    <span class="block mb-3 text-blue-500">Order by</span>
+    <label [for]="order" *ngFor="let order of orderList" class="block mb-2">
       <input
-        type='radio'
-        [id]='order'
-        name='order'
-        [value]='order'
-        [(ngModel)]='filters.orderBy'
-        (ngModelChange)='onFiltersChange()'
+        type="radio"
+        [id]="order"
+        name="order"
+        [value]="order"
+        [(ngModel)]="filters.orderBy"
+        (ngModelChange)="onFiltersChange()"
       />
       {{ order }}
     </label>
