--- a/forms/src/app/filters/filters.component.html
+++ b/forms/src/app/filters/filters.component.html
@@ -1,2 +1,2 @@
-<app-filter-group (activeFilters)='filterData($event)' />
-<app-data-table [data]='movies' (sort)='sorting()' />
+<app-filter-group (activeFilters)="filterData($event)" />
+<app-data-table [data]="movies" (sort)="sorting()" />
