--- a/forms/src/app/template-forms/template-forms-page/template-forms-page.component.html
+++ b/forms/src/app/template-forms/template-forms-page/template-forms-page.component.html
@@ -1,215 +1,216 @@
 <form
-  class='mt-8 grid grid-cols-6 gap-10 px-2'
-  #form='ngForm'
-  (reset)='onReset($event)'
-  (ngSubmit)='onSubmit(form)'
+  class="mt-8 grid grid-cols-6 gap-10 px-2"
+  #form="ngForm"
+  (reset)="onReset($event)"
+  (ngSubmit)="onSubmit(form)"
   [ngFormOptions]="{ updateOn: 'blur' }"
 >
-  <div class='col-span-6 sm:col-span-2'>
-    <label for='FirstName' class='block text-sm font-medium text-gray-700'> First Name </label>
+  <div class="col-span-6 sm:col-span-2">
+    <label for="FirstName" class="block text-sm font-medium text-gray-700"> First Name </label>
     <input
-      type='text'
-      id='FirstName'
-      name='first-name'
-      class='mt-1 w-full rounded-md border border-gray-400 bg-white text-sm text-gray-700 shadow-sm py-2 px-3'
-      placeholder='Enter your name'
-      [(ngModel)]='userInfo.firstName'
+      type="text"
+      id="FirstName"
+      name="first-name"
+      class="mt-1 w-full rounded-md border border-gray-400 bg-white text-sm text-gray-700 shadow-sm py-2 px-3"
+      placeholder="Enter your name"
+      [(ngModel)]="userInfo.firstName"
       [ngModelOptions]="{ updateOn: 'change' }"
-      #firstName='ngModel'
+      #firstName="ngModel"
       required
-      minlength='2'
-      [appBanWords]="isAdult | toggleBanWords:['test', 'hello']"
+      minlength="2"
+      [appBanWords]="isAdult | toggleBanWords : ['test', 'hello']"
     />
-    <span class='text-red-500 text-xs px-2' *ngIf="firstName.dirty && firstName.hasError('required')"
-    >This field is required</span
+    <span class="text-red-500 text-xs px-2" *ngIf="firstName.dirty && firstName.hasError('required')"
+      >This field is required</span
     >
-    <span class='text-red-500 text-xs px-2' *ngIf="firstName.dirty && firstName.hasError('minlength')">
+    <span class="text-red-500 text-xs px-2" *ngIf="firstName.dirty && firstName.hasError('minlength')">
       The length should be at least <strong>{{ firstName.getError('minlength')?.requiredLength }}</strong> characters
     </span>
-    <span class='text-red-500 text-xs px-2' *ngIf="firstName.dirty && firstName.hasError('appBanWords')">
+    <span class="text-red-500 text-xs px-2" *ngIf="firstName.dirty && firstName.hasError('appBanWords')">
       The value <strong>{{ firstName.getError('appBanWords').bannedWord }}</strong> is not allowed
     </span>
   </div>
-  <div class='col-span-6 sm:col-span-2'>
-    <label for='LastName' class='block text-sm font-medium text-gray-700'> Last Name </label>
+  <div class="col-span-6 sm:col-span-2">
+    <label for="LastName" class="block text-sm font-medium text-gray-700"> Last Name </label>
     <input
-      type='text'
-      id='LastName'
-      name='last-name'
-      class='mt-1 w-full rounded-md border border-gray-400 bg-white text-sm text-gray-700 shadow-sm py-2 px-3'
-      placeholder='Enter your last name'
-      [(ngModel)]='userInfo.lastName'
-      #lastName='ngModel'
+      type="text"
+      id="LastName"
+      name="last-name"
+      class="mt-1 w-full rounded-md border border-gray-400 bg-white text-sm text-gray-700 shadow-sm py-2 px-3"
+      placeholder="Enter your last name"
+      [(ngModel)]="userInfo.lastName"
+      #lastName="ngModel"
       required
-      minlength='3'
+      minlength="3"
     />
-    <span class='text-red-500 text-xs px-2' *ngIf="lastName.dirty && lastName.hasError('required')"
-    >This field is required</span
+    <span class="text-red-500 text-xs px-2" *ngIf="lastName.dirty && lastName.hasError('required')"
+      >This field is required</span
     >
-    <span class='text-red-500 text-xs px-2' *ngIf="lastName.dirty && lastName.hasError('minlength')">
+    <span class="text-red-500 text-xs px-2" *ngIf="lastName.dirty && lastName.hasError('minlength')">
       The length should be at least <strong>{{ lastName.getError('minlength')?.requiredLength }}</strong> characters
     </span>
   </div>
-  <div class='col-span-6 sm:col-span-2'>
-    <label for='Nickname' class='block text-sm font-medium text-gray-700'> Nickname </label>
+  <div class="col-span-6 sm:col-span-2">
+    <label for="Nickname" class="block text-sm font-medium text-gray-700"> Nickname </label>
     <input
-      type='text'
-      id='Nickname'
-      name='nick-name'
-      class='mt-1 w-full rounded-md border border-gray-400 bg-white text-sm text-gray-700 shadow-sm py-2 px-3'
-      placeholder='Come up with a nickname'
-      [(ngModel)]='userInfo.nickname'
-      [ngModelOptions]='{ standalone: true, updateOn: "blur" }'
-      #nickname='ngModel'
+      type="text"
+      id="Nickname"
+      name="nick-name"
+      class="mt-1 w-full rounded-md border border-gray-400 bg-white text-sm text-gray-700 shadow-sm py-2 px-3"
+      placeholder="Come up with a nickname"
+      [(ngModel)]="userInfo.nickname"
+      [ngModelOptions]="{ standalone: true, updateOn: 'blur' }"
+      #nickname="ngModel"
       required
-      minlength='2'
-      pattern='^[\w.]+$'
-      appBanWords='test'
+      minlength="2"
+      pattern="^[\w.]+$"
+      appBanWords="test"
       appUniqueNickname
     />
-    <div class='text-xs text-blue-700 mt-1' *ngIf='nickname.pending'>Checking<span
-      class='animate-ping'>...</span></div>
-    <span class='text-red-500 text-xs px-2' *ngIf="nickname.dirty && nickname.hasError('uniqueNickname')">
+    <div class="text-xs text-blue-700 mt-1" *ngIf="nickname.pending">Checking<span class="animate-ping">...</span></div>
+    <span class="text-red-500 text-xs px-2" *ngIf="nickname.dirty && nickname.hasError('uniqueNickname')">
       This name is taken
     </span>
   </div>
-  <div class='col-span-6 sm:col-span-2'>
-    <label for='Email' class='block text-sm font-medium text-gray-700'> Email </label>
+  <div class="col-span-6 sm:col-span-2">
+    <label for="Email" class="block text-sm font-medium text-gray-700"> Email </label>
     <input
-      type='email'
-      id='Email'
-      name='email'
-      class='mt-1 w-full rounded-md border border-gray-400 bg-white text-sm text-gray-700 shadow-sm py-2 px-3'
-      placeholder='Provide your email'
-      [(ngModel)]='userInfo.email'
+      type="email"
+      id="Email"
+      name="email"
+      class="mt-1 w-full rounded-md border border-gray-400 bg-white text-sm text-gray-700 shadow-sm py-2 px-3"
+      placeholder="Provide your email"
+      [(ngModel)]="userInfo.email"
       required
       email
     />
   </div>
-  <div class='col-span-6 sm:col-span-2'>
-    <label for='YearOfBirth' class='block text-sm font-medium text-gray-700'> Year of birth </label>
+  <div class="col-span-6 sm:col-span-2">
+    <label for="YearOfBirth" class="block text-sm font-medium text-gray-700"> Year of birth </label>
     <select
-      name='year-of-birth'
-      id='YearOfBirth'
-      class='mt-1 w-full rounded-md border border-gray-400 bg-white text-sm text-gray-700 shadow-sm py-2 px-3'
-      [(ngModel)]='userInfo.yearOfBirth'
+      name="year-of-birth"
+      id="YearOfBirth"
+      class="mt-1 w-full rounded-md border border-gray-400 bg-white text-sm text-gray-700 shadow-sm py-2 px-3"
+      [(ngModel)]="userInfo.yearOfBirth"
     >
-      <option *ngFor='let year of years' [value]='year'>{{ year }}</option>
+      <option *ngFor="let year of years" [value]="year">{{ year }}</option>
     </select>
   </div>
-  <div class='col-span-6 sm:col-span-2'>
-    <label for='Passport' class='block text-sm font-medium text-gray-700'> Passport Number </label>
+  <div class="col-span-6 sm:col-span-2">
+    <label for="Passport" class="block text-sm font-medium text-gray-700"> Passport Number </label>
     <input
-      type='text'
-      id='Passport'
-      name='passport'
-      class='mt-1 w-full rounded-md border border-gray-400 bg-white text-sm text-gray-700 shadow-sm py-2 px-3'
-      placeholder='Provide Passport Data'
-      #passport='ngModel'
-      [(ngModel)]='userInfo.passport'
-      pattern='^[A-Z]{2}[0-9]{3}$'
-      [required]='isAdult'
+      type="text"
+      id="Passport"
+      name="passport"
+      class="mt-1 w-full rounded-md border border-gray-400 bg-white text-sm text-gray-700 shadow-sm py-2 px-3"
+      placeholder="Provide Passport Data"
+      #passport="ngModel"
+      [(ngModel)]="userInfo.passport"
+      pattern="^[A-Z]{2}[0-9]{3}$"
+      [required]="isAdult"
     />
-    <span class='text-red-500 text-xs px-2' *ngIf="passport.dirty && passport.hasError('required')"
-    >This field is required</span
+    <span class="text-red-500 text-xs px-2" *ngIf="passport.dirty && passport.hasError('required')"
+      >This field is required</span
     >
   </div>
   <fieldset
-    class='grid grid-cols-6 gap-8 col-span-6 sm:col-span-6 border border-gray-200 p-2 pb-4'
-    ngModelGroup='address'
+    class="grid grid-cols-6 gap-8 col-span-6 sm:col-span-6 border border-gray-200 p-2 pb-4"
+    ngModelGroup="address"
   >
-    <legend class='px-2 text-gray-400'>Address</legend>
-    <div class='col-span-6 sm:col-span-2'>
-      <label for='FullAddress' class='block text-sm font-medium text-gray-700'> Full Address </label>
+    <legend class="px-2 text-gray-400">Address</legend>
+    <div class="col-span-6 sm:col-span-2">
+      <label for="FullAddress" class="block text-sm font-medium text-gray-700"> Full Address </label>
       <input
-        type='text'
-        id='FullAddress'
-        name='full-address'
-        class='mt-1 w-full rounded-md border border-gray-400 bg-white text-sm text-gray-700 shadow-sm py-2 px-3'
-        placeholder='Street name and house number'
-        [(ngModel)]='userInfo.fullAddress'
+        type="text"
+        id="FullAddress"
+        name="full-address"
+        class="mt-1 w-full rounded-md border border-gray-400 bg-white text-sm text-gray-700 shadow-sm py-2 px-3"
+        placeholder="Street name and house number"
+        [(ngModel)]="userInfo.fullAddress"
         required
       />
     </div>
-    <div class='col-span-6 sm:col-span-2'>
-      <label for='City' class='block text-sm font-medium text-gray-700'> City </label>
+    <div class="col-span-6 sm:col-span-2">
+      <label for="City" class="block text-sm font-medium text-gray-700"> City </label>
       <input
-        type='text'
-        id='City'
-        name='city'
-        class='mt-1 w-full rounded-md border border-gray-400 bg-white text-sm text-gray-700 shadow-sm py-2 px-3'
-        placeholder='City'
-        [(ngModel)]='userInfo.city'
+        type="text"
+        id="City"
+        name="city"
+        class="mt-1 w-full rounded-md border border-gray-400 bg-white text-sm text-gray-700 shadow-sm py-2 px-3"
+        placeholder="City"
+        [(ngModel)]="userInfo.city"
         required
       />
     </div>
-    <div class='col-span-6 sm:col-span-2'>
-      <label for='PostCode' class='block text-sm font-medium text-gray-700'> Post code </label>
+    <div class="col-span-6 sm:col-span-2">
+      <label for="PostCode" class="block text-sm font-medium text-gray-700"> Post code </label>
       <input
-        type='text'
-        id='PostCode'
-        name='post-code'
-        class='mt-1 w-full rounded-md border border-gray-400 bg-white text-sm text-gray-700 shadow-sm py-2 px-3'
-        placeholder='Post code'
-        [(ngModel)]='userInfo.postCode'
+        type="text"
+        id="PostCode"
+        name="post-code"
+        class="mt-1 w-full rounded-md border border-gray-400 bg-white text-sm text-gray-700 shadow-sm py-2 px-3"
+        placeholder="Post code"
+        [(ngModel)]="userInfo.postCode"
         required
       />
     </div>
   </fieldset>
   <fieldset
-    class='grid grid-cols-6 gap-8 col-span-6 sm:col-span-6 border border-gray-200 p-2 pb-4'
-    ngModelGroup='passwords'
+    class="grid grid-cols-6 gap-8 col-span-6 sm:col-span-6 border border-gray-200 p-2 pb-4"
+    ngModelGroup="passwords"
     appPasswordMatch
   >
-    <legend class='px-2 text-gray-400'>User Password</legend>
-    <div class='col-span-6 sm:col-span-2'>
-      <label for='password' class='block text-sm font-medium text-gray-700'>Password</label>
+    <legend class="px-2 text-gray-400">User Password</legend>
+    <div class="col-span-6 sm:col-span-2">
+      <label for="password" class="block text-sm font-medium text-gray-700">Password</label>
       <input
-        type='password'
-        id='password'
-        name='password'
-        class='mt-1 w-full rounded-md border border-gray-400 bg-white text-sm text-gray-700 shadow-sm py-2 px-3'
+        type="password"
+        id="password"
+        name="password"
+        class="mt-1 w-full rounded-md border border-gray-400 bg-white text-sm text-gray-700 shadow-sm py-2 px-3"
         placeholder="Enter user's password"
-        [(ngModel)]='userInfo.password'
-        #password='ngModel'
+        [(ngModel)]="userInfo.password"
+        #password="ngModel"
         required
-        minlength='6'
+        minlength="6"
       />
-      <span class='text-red-500 text-xs px-2' *ngIf="password.dirty && password.hasError('required')">
+      <span class="text-red-500 text-xs px-2" *ngIf="password.dirty && password.hasError('required')">
         This field is required
       </span>
-      <span class='text-red-500 text-xs px-2' *ngIf="password.dirty && password.hasError('minlength')">
+      <span class="text-red-500 text-xs px-2" *ngIf="password.dirty && password.hasError('minlength')">
         The length should be at least <strong>{{ password.getError('minlength')?.requiredLength }}</strong> characters
       </span>
     </div>
-    <div class='col-span-6 sm:col-span-2'>
-      <label for='confirmPassword' class='block text-sm font-medium text-gray-700'>Confirm password</label>
+    <div class="col-span-6 sm:col-span-2">
+      <label for="confirmPassword" class="block text-sm font-medium text-gray-700">Confirm password</label>
       <input
-        type='password'
-        id='confirmPassword'
-        name='confirmPassword'
-        class='mt-1 w-full rounded-md border border-gray-400 bg-white text-sm text-gray-700 shadow-sm py-2 px-3'
+        type="password"
+        id="confirmPassword"
+        name="confirmPassword"
+        class="mt-1 w-full rounded-md border border-gray-400 bg-white text-sm text-gray-700 shadow-sm py-2 px-3"
         placeholder="Confirm user's password"
-        #confirmPassword='ngModel'
-        [(ngModel)]='userInfo.confirmPassword'
+        #confirmPassword="ngModel"
+        [(ngModel)]="userInfo.confirmPassword"
       />
-      <span class='text-red-500 text-xs px-2'
-            *ngIf="confirmPassword.dirty && confirmPassword.hasError('passwordMatch')">
-          Password doesn't match
-        </span>
+      <span
+        class="text-red-500 text-xs px-2"
+        *ngIf="confirmPassword.dirty && confirmPassword.hasError('passwordMatch')"
+      >
+        Password doesn't match
+      </span>
     </div>
   </fieldset>
-  <div class='col-span-6 sm:flex sm:items-center sm:justify-end sm:gap-4 mt-4'>
+  <div class="col-span-6 sm:flex sm:items-center sm:justify-end sm:gap-4 mt-4">
     <button
-      type='reset'
-      class='inline-block shrink-0 rounded-md border border-gray-500 px-12 py-3 text-sm font-medium text-gray-600 transition hover:bg-transparent hover:text-gray-600 focus:outline-none focus:ring active:text-blue-500'
+      type="reset"
+      class="inline-block shrink-0 rounded-md border border-gray-500 px-12 py-3 text-sm font-medium text-gray-600 transition hover:bg-transparent hover:text-gray-600 focus:outline-none focus:ring active:text-blue-500"
     >
       Reset
     </button>
     <button
-      type='submit'
-      [disabled]='form.invalid || form.pending'
-      class='inline-block shrink-0 rounded-md border border-blue-600 bg-blue-600 px-12 py-3 text-sm font-medium text-white transition hover:bg-transparent hover:text-blue-600 focus:outline-none focus:ring active:text-blue-500'
+      type="submit"
+      [disabled]="form.invalid || form.pending"
+      class="inline-block shrink-0 rounded-md border border-blue-600 bg-blue-600 px-12 py-3 text-sm font-medium text-white transition hover:bg-transparent hover:text-blue-600 focus:outline-none focus:ring active:text-blue-500"
     >
       Create an account
     </button>
