--- a/forms/src/app/core/footer/footer.component.html
+++ b/forms/src/app/core/footer/footer.component.html
@@ -1,3 +1,3 @@
-<footer class="fixed bottom-0 left-0 w-full text-center pb-2 text-gray-500">
+<footer class="absolute bottom-0 left-0 w-full text-center pb-2 text-gray-500">
   <span>© {{ year }} Angular Frontend</span>
 </footer>
