--- a/forms/src/styles.scss
+++ b/forms/src/styles.scss
@@ -8,7 +8,7 @@ body {
   min-height: 100vh;
 }
 
-input:focus {
+input:none(.form-input):focus {
   outline: none;
 }
 
@@ -32,3 +32,23 @@ input:focus {
   }
 }
 
+// Global styles for inputs
+.form-label {
+  @apply block text-sm font-medium text-gray-700;
+}
+
+.form-input {
+  @apply mt-1 mb-1 w-full rounded-md outline outline-1 outline-gray-400 bg-white text-sm text-gray-700 shadow-sm py-2 px-3;
+}
+
+.ng-valid.ng-dirty:not([formGroupName]):not([formArrayName]):not(form):not(.phones) {
+  @apply outline outline-1 outline-green-500;
+}
+
+.ng-invalid.ng-dirty:not([formGroupName]):not([formArrayName]):not(form) {
+  @apply outline outline-1 outline-red-500;
+}
+
+.error-message {
+  @apply text-red-500 text-xs px-2 block animate-fade-message;
+}
