--- a/forms/src/app/dynamic-forms/dynamic-forms-page/dynamic-forms-page.component.html
+++ b/forms/src/app/dynamic-forms/dynamic-forms-page/dynamic-forms-page.component.html
@@ -24,7 +24,7 @@
         </ng-container>
       </div>
       <div class="text-right col-span-12">
-        <app-button type="submit" text="Save" />
+        <app-button type="submit" text="Save" [disabled]="form.invalid" />
       </div>
     </form>
   </div>
