feat(dynamic-forms): implement dynamic components

--- a/forms/src/app/dynamic-forms/dynamic-forms-page/dynamic-forms-page.component.html
+++ b/forms/src/app/dynamic-forms/dynamic-forms-page/dynamic-forms-page.component.html
@@ -5,10 +5,14 @@
   </div>
   <div *ngIf="formConfig$ | async as formConfig" class="text-center grow">
     <h3 class="text-lg font-bold mb-3">{{ formConfig.description }}</h3>
-    <form [formGroup]="form" (ngSubmit)="onSubmit()" class="text-left max-w-lg m-auto grid gap-5">
+    <form [formGroup]="form" (ngSubmit)="onSubmit()" class="text-left max-w-lg m-auto grid gap-5" autocomplete="off">
       <div *ngFor="let control of formConfig.controls | keyvalue" class="col-span-12">
         <label [for]="control.key" class="form-label">{{ control.value.label }}</label>
-        <ng-container [ngSwitch]="control.value.controlType">
+        <ng-container
+          [ngComponentOutlet]="controlResolver.resolve(control.value.controlType)"
+          [ngComponentOutletInjector]="control.key | controlInjector : control.value"
+        />
+        <!-- <ng-container [ngSwitch]="control.value.controlType">
           <input
             *ngSwitchCase="'input'"
             [formControlName]="control.key"
@@ -21,7 +25,7 @@
               <option *ngFor="let option of control.value.options" [value]="option.value">{{ option.label }}</option>
             </select>
           </ng-container>
-        </ng-container>
+        </ng-container> -->
         <span *ngIf="form.get(control.key)?.dirty && form.get(control.key)?.hasError('required')" class="error-message">
           This field is required
         </span>
