--- a/forms/src/app/dynamic-forms/dynamic-forms-page/dynamic-forms-page.component.html
+++ b/forms/src/app/dynamic-forms/dynamic-forms-page/dynamic-forms-page.component.html
@@ -7,12 +7,13 @@
     <h3 class="text-lg font-bold mb-3">{{ formConfig.description }}</h3>
     <form [formGroup]="form" (ngSubmit)="onSubmit()" class="text-left max-w-lg m-auto grid gap-5" autocomplete="off">
       <div *ngFor="let control of formConfig.controls | keyvalue" class="col-span-12">
-        <label [for]="control.key" class="form-label">{{ control.value.label }}</label>
         <ng-container
           [ngComponentOutlet]="controlResolver.resolve(control.value.controlType)"
           [ngComponentOutletInjector]="control.key | controlInjector : control.value"
         />
-        <!-- <ng-container [ngSwitch]="control.value.controlType">
+        <!-- 
+        <label [for]="control.key" class="form-label">{{ control.value.label }}</label>
+        <ng-container [ngSwitch]="control.value.controlType">
           <input
             *ngSwitchCase="'input'"
             [formControlName]="control.key"
